--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>AOOF</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="../img/icon.png">
   <link rel="stylesheet" href="css/index.css">
   <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Pacifico|Work+Sans:300,400|Montserrat:700,800" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
