our work bold text adjusted to fit mobile view

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -263,9 +263,14 @@
         <div class="col-3 header-line my-auto"></div>
       </div>
       <div class="mx-3 mt-5">
-        <h4>A O O F &nbsp; H A S &nbsp; S P O N S O R E D &nbsp; 2 9 &nbsp; S T U D E N T S</h4>
-        <h4>T H R O U G H &nbsp; S I X &nbsp; Y E A R S &nbsp; O F &nbsp; S E C O N D A R Y</h4>
-        <h4 class="pb-4">S C H O O L &nbsp; E D U C A T I O N.</h4>
+        <div class="desktop">
+          <h4>A O O F &nbsp; H A S &nbsp; S P O N S O R E D &nbsp; 2 9 &nbsp; S T U D E N T S</h4>
+          <h4>T H R O U G H &nbsp; S I X &nbsp; Y E A R S &nbsp; O F &nbsp; S E C O N D A R Y</h4>
+          <h4 class="pb-4">S C H O O L &nbsp; E D U C A T I O N.</h4>
+        </div>
+        <div class="mobile">
+          <h4>AOOF HAS SPONSORED 29 STUDENTS THROUGH SIX YEARS SECONDARY SCHOOL EDUCATION.</h4>
+        </div>
         <p class="py-4">
           Every year, an examination is conducted for primary six students from six public schools in Ijebu and
           successful candidates move on to an oral interview with their parents/guardian. The top 5 students from
@@ -326,11 +331,6 @@
     <div class="mx-3 my-5 text-center mobile">
       <h4>TO ERADICATE ILLITERACY IN IJEBU BY PROVIDING FINANCIAL AID TO BRIGHT & LOCAL STUDENTS WHO LACK THE MEANS
         OF FUNDING THEIR EDUCATION
-        <!-- TO ERA D I C A T E &nbsp; I L L I T E R A C Y &nbsp; I N &nbsp; I J E B U - O D E &nbsp; B Y
-        &nbsp; P R O V I D I N G &nbsp; F I N A N C I A L &nbsp; A I D &nbsp; T O &nbsp; B R I G H T &nbsp; L O C A L
-        &nbsp; S T U D E N T S
-        &nbsp; W H O &nbsp; L A C K &nbsp; T H E &nbsp; M E A N S &nbsp; O F &nbsp; F U N D I N G &nbsp; T H E I R
-        &nbsp; E D U C A T I O N -->
       </h4>
     </div>
   </section>
