pay stack payment gateway completed

--- a/client/views/static/css/index.css
+++ b/client/views/static/css/index.css
@@ -48,7 +48,7 @@ main {
   padding-bottom: 7rem;
 }
 .middle-quote {
-  padding: 18rem 0 !important;
+  padding: 18rem 1rem !important;
 }
 .quote h1 {
   font-size: 5rem;
